--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.5.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-number-format": "^5.4.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
